--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
     <title>Queue System</title>
     <style>
         /* Main container styling */
